--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Simon Game</title>
+  <title>لعبة الذاكرة</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <Link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
-  <h1 id="level-title">Welcome To Simon Says Game :) <br>Press A Key to Start</h1>
+  <h1 id="level-title">لعبة الذاكرة<br>اضغط اي ماكن في الشاشة للبدء</h1>
   <div class="container">
     <div lass="row">
 
@@ -36,7 +36,7 @@
 
   </div>
   
-  <p>@Khalid_Altuma <br>Last updated: Aug 2022</p>
+  <p>@Khalid_Altuma <br> اخر تحديث ٢٠٢٣/١٢</p>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="index.js"></script>
