--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
 
   </div>
   
+  <h2 id="leaderboard-title"> أفضل اللاعبين </h2>
+  <p id="bestplayer">نجم الرياضي / مرحلة٢٠</p>
+  <br>
+  <br>
+
   <p>@Khalid_Altuma <br> اخر تحديث ٢٠٢٣/١٢</p>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="index.js"></script>
